fix(): title overflow (closes #44)

--- a/src/styles/window-top.sass
+++ b/src/styles/window-top.sass
@@ -48,7 +48,8 @@
       border-right: 1px solid #666
       border-bottom: 1px solid #666
       margin-left: -1px
-
+      min-width: 0px
+      
       &:first-child
         border-left: none
 
@@ -61,3 +62,7 @@
       .title
         font-size: 12px
         color: #a5a2a2
+        overflow: hidden
+        text-overflow: ellipsis
+        white-space: nowrap
+        padding: 0 10px
